# label_pizza

./: .gitignore  .nfs000000000a03efb60000554f  QUICKSTART.md  README.md  database_design.md  external_id_uniqueness_report.json  init_db.py  instructions.md  label_pizza_workspace  models.py  pyproject.toml  run_daily_job.py  schemas.json  segment.json  segment_reorganized.json  segment_review.json  segment_review_reorganized.json  sync_from_folder.py  taxonomy.json  test.py  test_output.txt  upload_instructions.md  upload_project.py  upload_projects_from_folder.py  users.json  verification_config.json  video_annotation.db  videos.json  videos_data.json
.streamlit/: config.toml
CameraLighting/: assignments.json  project_groups_todo.json  projects.json  projects_todo copy.json  projects_todo.json  schemas.json  user_project_assignments.json  users.json  videos.json  videos_todo.json
CameraMotion/: CameraMotionDone_videos.json  CameraMotion_videos.json  Camera_Motion_Done_Projects.json  Camera_Motion_Projects.json  assignments.json  project_groups.json  projects.json  schemas.json  test_schemas.json  users copy.json  users.json  videos.json
CameraShotcomp/: ShotCompositionDone_videos.json  ShotComposition_Done_Projects.json  ShotComposition_Projects.json  ShotComposition_videos.json  annotations.json  schemas.json  shotcomp_taxonomy.json  users.json  videos.json
Motion_Double_Checked_Shotcomp_Untrusted/: videos.json
Motion_Double_Checked_Without_Shotcomp_Done/: videos.json
Motion_Double_Checked_and_Shotcomp_Trusted/: videos.json
Motion_Supplement/: videos.json
(+723 files in other folders)
